Alteraçoes no modulo admin

--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -25,7 +25,7 @@
     <table class="table table-bordered table-striped" style="font-size: 13px;">
         <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
-                <th>Código Paciente</th>
+               <!-- <th>Código Paciente</th>-->
                 <th>Nome</th>
                 <th>Nome da mãe</th>
                 <th>Data de nascimento</th>
@@ -38,7 +38,7 @@
         <tbody>
 
             <tr>
-                <td>12</td>
+               <!-- <td>12</td>-->
                 <td>José da Silva</td>
                 <td>Maria da Silva</td>
                 <td>06/10/1989</td>
