--- a/application/modules/admin/views/scripts/mensagem/historico.phtml
+++ b/application/modules/admin/views/scripts/mensagem/historico.phtml
@@ -54,22 +54,22 @@
     <table class="table table-bordered table-striped table-condensed" style="font-size: 13px;">
         <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
-                <th style="width: 125px">Código mensagem</th>
+                
                 <th style="width: 90px">Data de Envio</th>
                 <th style="text-align: center;width: 500px">Mensagem</th>
                 <th style="width: 130px">Destinatário</th>
-                <th style="width: 110px">Código Paciente</th>
-                <th>Função</th>
+               
+                <th style="width: 80px">Função</th>
             </tr>
         </thead>
         <tbody>
 
             <tr>
-                <td>18</td>
+                
                 <td>09/06/2011</td>
                 <td>Você deverá comparecer no dia 20/06/2011 ao posto mais proximo para tomar a 2ª dose da vacina contra a Hepatite B</td>
                 <td>João da Silva Xavier</td>
-                <td>18</td>
+               
                 <td>
                     <a href="/admin/mensagem/enviar-mensagem<?php echo $funcionarios->cod_pessoa ?>" title="Enviar Mensagem" class="btn btn-info btn btn-small"><i class="icon-envelope icon-white"></i></a>
                     <a href="/admin/mensagem/enviar-mensagem<?php echo $funcionarios->cod_pessoa ?>" title="Excluir Mensagem" class="btn btn-danger btn btn-small"><i class="icon-trash icon-white"></i></a>
