--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -27,7 +27,7 @@ echo $this->flashMessenger();
     <table class="table table-bordered table-striped"  style="font-size: 13px;">
         <thead style="background-color: #08c; color: #FFFFFF">
             <tr>
-                <th>Código</th>
+               <!-- <th>Código</th>-->
                 <th>Nome Completo</th>
                 <th>Registro Nascimento</th>
                 <th>RG Nº</th>
@@ -38,7 +38,7 @@ echo $this->flashMessenger();
         <tbody>
             <?php foreach ($this->listPacientes as $paciente): ?>
                 <tr>
-                    <td><?php echo $paciente->cod_pac ?></td>
+                   <!-- <td><?php echo $paciente->cod_pac ?></td>-->
                     <td><?php echo $paciente->nome ?></td>
                     <td><?php echo $paciente->rg ?></td>
                     <td><?php echo $paciente->rg ?></td>
