--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -1,4 +1,12 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
+
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/pessoa/consulta-funcionario"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
+
 <fieldset>
     <legend>Alterar Funcionário</legend>
     <?php
