--- a/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-paciente.phtml
@@ -1,5 +1,13 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <?php echo $this->flashMessenger() ?>
+
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/pessoa/consulta-paciente"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
+
 <fieldset>
     <legend>Alterar Paciente</legend>
     <div style="margin-bottom: 18px;" class="tabbable">
