--- a/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
@@ -1,3 +1,11 @@
+
+<ul class="pager offset10">
+    <li class="previous">
+        <a href="/admin/vacina/consulta-vacina"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+    </li>
+
+</ul>
+
 <fieldset>
     <legend>Alterar Vacina</legend>
     <?php echo $this->flashMessenger() ?>
