--- a/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/consulta-vacina.phtml
@@ -23,8 +23,9 @@
             <div class="alert alert-info">Resultado(s) da(s) consulta(s) para: <strong><?php echo $this->request['search'] ?></strong></div>
             <thead style="background-color: #08c; color: #FFFFFF">
                 <tr>
-                    <th>Código da Vacina</th>
+                   <!-- <th>Código da Vacina</th>-->
                     <th>Nome da Vacina</th>
+                    <th>Numero do Lote</th>
                     <th>Data de Fabricação</th>
                     <th>Data de Vencimento</th>
                     <th width="75">Função</th>
@@ -33,10 +34,11 @@
             <tbody>
                 <?php foreach ($this->vacinas as $vacinas): ?>
                     <tr>
-                        <td><?php echo $vacinas->cod_vacina ?></td>
+                       <!--<td><?php echo $vacinas->cod_vacina ?></td>-->
                         <td><?php echo $vacinas->nome_vacina ?></td>
-                        <td><?php echo $vacinas->dt_fabric ?></td>
-                        <td><?php echo $vacinas->dt_venc ?></td>
+                        <td><?php echo $vacinas->num_lote ?></td>
+                        <td><?php echo date('d-m-Y', strtotime($vacinas->dt_fabric)) ?></td>
+                        <td><?php echo date('d-m-Y', strtotime($vacinas->dt_venc)) ?></td>
                         <td>
                             <a href="/admin/vacina/alterar-vacina/cod_vacina/<?php echo $vacinas->cod_vacina ?>" title="Alterar" class="btn btn-primary btn btn-mini"><i class="icon-pencil icon-white"></i></a>
                             <a href="/admin/vacina/excluir-vacina/cod_lote/<?php echo $vacinas->cod_lote ?>/cod_vacina/<?php echo $vacinas->cod_vacina ?>" title="Excluir" class="btn btn-danger btn btn-mini confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
