--- a/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-funcionario.phtml
@@ -37,9 +37,9 @@ echo $this->flashMessenger();
                 </tr>
             </thead>
             <tbody>
-                <?php foreach ($this->listFuncionarios as $funcionarios): ?>
+                <?php foreach ($this->listFuncionarios as $key=>$funcionarios): ?>
                     <tr>
-                        <td><?php echo $funcionarios->cod_pessoa ?></td>
+                        <td><?php echo $key+1 ?></td>
                         <td><?php echo $funcionarios->nome_login ?></td>
                         <td><?php echo $funcionarios->nome ?></td>
                         <td><?php echo $funcionarios->matricula ?></td>
