Add, linhas amigaveis para resultado de consulta de pessoa

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -214,7 +214,8 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">E-mail:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->email ?>
+                                    <input id="email" class="input-xlarge" type="email" value="" name="email">
+                                    <?php //echo $this->form->email ?>
                                 </div>
                             </div>
                             <div class="control-group">
