--- a/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/consulta-paciente.phtml
@@ -32,7 +32,7 @@ echo $this->flashMessenger();
                 <th>Registro Nascimento</th>
                 <th>RG Nº</th>
                 <th>CPF Nº</th>
-                <th width="75">Função</th>
+                <th width="100">Função</th>
             </tr>
         </thead>
         <tbody>
@@ -44,8 +44,9 @@ echo $this->flashMessenger();
                     <td><?php echo $paciente->rg ?></td>
                     <td><?php echo $paciente->cpf ?></td>
                     <td>
+                        <a href="/admin/pessoa/visualisa-cadastro/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar cadastro" class="btn btn-warning btn btn-mini"><i class="icon-eye-open icon-white"></i></a>
                         <a href="/admin/pessoa/editar-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" 
-                           title="Alterar" class="btn btn-info btn-mini">
+                           title="Alterar cadastro" class="btn btn-info btn-mini">
                             <i class="icon-edit icon-white"></i>
                         </a>
                         <a href="/admin/pessoa/excluir-paciente/cod_pessoa/<?php echo $paciente->cod_pessoa ?>" 
