--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -1,90 +1,59 @@
-<script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <ul class="pager offset10">
     <li class="previous">
         <a href="/admin/cartao/consulta-cartao"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
     </li>
-
 </ul>
 <fieldset>
     <legend>Registro e Aprazamento de vacinas</legend>
-    <?php
-    if ($this->mensagem):
-        ?>
-        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
-        <?php
-    endif;
-    ?>
+
+    <?php echo $this->flashMessenger() ?>
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#tab1">Dados do Paciente</a></li>
             <li class=""><a data-toggle="tab" href="#tab2">Registrar Vacinas</a></li>
             <li class=""><a data-toggle="tab" href="#tab3">Aprazar Vacinas</a></li>
-
         </ul>
         <form class="form-horizontal" method="post">
             <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
 
-                   <!--INICIO DO PRIMEIRO MENU-->
-                        <div class="span4">
-                            <table class="table table-bordered">
-                                                               
-                                <tbody  style="font-size: 13px;">
-                                    <tr class="info">
-                                        <td>Código do Paciente:</td>
-                                        <td>12</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Nome do Paciente:</td>
-                                        <td>José da Silva</td>
-                                    </tr>
-                                    <tr class="info">
-                                        <td>Nome da Mãe:</td>
-                                        <td>Maria da Silva</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Data de Nascimento:</td>
-                                        <td>06/10/1989</td>
-                                    </tr>
-                                    <tr class="info">
-                                        <td>Sexo:</td>
-                                        <td>Masculino</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Telefone Celular:</td>
-                                        <td>(61)9152-8547</td>
-                                    </tr>
-                                    <tr class="info">
-                                        <td>E-mail:</td>
-                                        <td>jose_silva@gmail.com</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                  
+                    <!--INICIO DO PRIMEIRO MENU-->
+                    <div class="span4">
+                        <table class="table table-bordered">
 
-                    
-                    <!--<h5><p class="text-left muted">
-                            Codigo do Paciente:<strong> 12</strong><br> 
-                            Nome do Paciente: <strong>José da Silva</strong><br> 
-                            Nome da mãe:<strong> Maria da Silva</strong><br> 
-                            Data de Nascimento:<strong> 06/10/1989</strong><br>
-                            Sexo: <strong>M</strong><br>
-                            Telefone celular:<strong> (61) 9152-8547</strong><br> 
-                            email:<strong> jose_silva@gmail.com</strong>
-                        </p></h5> -->
-
-                    <!--<div class="rows-fluid">
-                        <div class="span12">
-                            <div class="form-actions">
-                                <div class="control-group">
-                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar&nbsp; <i class="icon-forward icon-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
-
+                            <tbody  style="font-size: 13px;">
+                                <tr class="info">
+                                    <td>Código do Paciente:</td>
+                                    <td><?php echo $this->paciente['cod_pessoa'] ?></td>
+                                </tr>
+                                <tr>
+                                    <td>Nome do Paciente:</td>
+                                    <td><?php echo $this->paciente['nome'] ?></td>
+                                </tr>
+                                <tr class="info">
+                                    <td>Nome da Mãe:</td>
+                                    <td><?php echo $this->paciente['nome_mae'] ?></td>
+                                </tr>
+                                <tr>
+                                    <td>Data de Nascimento:</td>
+                                    <td><?php echo date('d-m-Y', strtotime($this->paciente['dt_nasc'])) ?></td>
+                                </tr>
+                                <tr class="info">
+                                    <td>Sexo:</td>
+                                    <td><?php echo $this->paciente['sexo'] == 'M' ? 'Masculino' : 'Feminino' ?></td>
+                                </tr>
+                                <tr>
+                                    <td>Telefone Celular:</td>
+                                    <td><?php echo $this->paciente['num_tel'] ?></td>
+                                </tr>
+                                <tr class="info">
+                                    <td>E-mail:</td>
+                                    <td><?php echo $this->paciente['email'] ?></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div> <!--FIM DO PRIMEIRO MENU-->
 
                 <div id="tab2" class="tab-pane">
@@ -95,76 +64,50 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Data da Aplicação:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">&nbsp;DD/MM/AAAA
+                                    <?php echo $this->form->dt_vac_aplicada ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número da Dose:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>1º dose</option>
-                                        <option>2º dose</option>
-                                        <option>3º dose</option>
-                                        <option>Dose de reforço</option>
-                                    </select>
+                                    <?php echo $this->form->cod_dose ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>Unidade de Saúde 1</option>
-                                        <option>Unidade de Saúde 2</option>
-                                    </select>
+                                    <?php echo $this->form->cod_un_saude ?>
                                 </div>
                             </div>
-
                         </div>
                         <div class="span6">
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Nome da Vacina:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>BCG - ID</option>
-                                        <option>Hepatite B</option>
-                                        <option>Vacina Oral de Rotavírus Humano (VROH)</option>
-                                        <option>Vacina oral poliomielite (VOP)</option>
-                                    </select>
+                                    <?php echo $this->form->cod_vacina ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Lote da Vacina:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->cod_lote ?>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Nome do Responsável:</label>
+                                <label for="inputEmail" class="control-label">Matricula do Responsável:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">
+                                    <?php echo $this->form->matricula ?>
                                 </div>
                             </div>
-
-
-
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Campanha:</label>
+                                <div class="controls">
+                                    <?php echo $this->form->cod_campanha ?>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-                    <!--<div class="rows-fluid">
-                        <div class="span12">
-                            <div class="form-actions">
-                                <div class="control-group">
-                                    <a class="btn btn-primary" href="#tab2" data-toggle="tab">Continuar <i class="icon-forward icon-white"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
-
                 </div> <!--FIM DO SEGUNDO MENU-->
-
 
                 <div id="tab3" class="tab-pane">
 
@@ -174,51 +117,29 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Data da Aplicação:</label>
                                 <div class="controls">
-                                    <input type="text" placeholder="Text input">&nbsp;DD/MM/AAAA
+                                    <?php echo $this->form->dt_aprazada ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número da Dose:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>1º dose</option>
-                                        <option>2º dose</option>
-                                        <option>3º dose</option>
-                                        <option>Dose de reforço</option>
-                                    </select>
+                                    <?php echo $this->form->cod_dose ?>
                                 </div>
                             </div>
-
-
                         </div>
                         <div class="span6">
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>Unidade de Saúde 1</option>
-                                        <option>Unidade de Saúde 2</option>
-                                    </select>
+                                    <?php echo $this->form->cod_un_saude_apraz ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Nome da Vacina:</label>
                                 <div class="controls">
-                                    <select>
-                                        <option>Selecione a opção</option>
-                                        <option>BCG - ID</option>
-                                        <option>Hepatite B</option>
-                                        <option>Vacina Oral de Rotavírus Humano (VROH)</option>
-                                        <option>Vacina oral poliomielite (VOP)</option>
-                                    </select>
+                                    <?php echo $this->form->cod_vacina_apraz ?>
                                 </div>
                             </div>
-
-
-
-
                         </div>
                     </div>
 
