--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -1,5 +1,8 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
-<?php echo $this->modal ?>
+<?php
+    echo $this->modal;
+    echo $this->flashMessenger();
+?>
 <fieldset>
     <legend>Consultar Cartão de Vacinas</legend>
 
@@ -36,36 +39,31 @@
             </tr>
         </thead>
         <tbody>
-
-            <tr>
-               <!-- <td>12</td>-->
-                <td>José da Silva</td>
-                <td>Maria da Silva</td>
-                <td>06/10/1989</td>
-                <td>M</td>
-                <td>25465878</td>
-                <td>(61)9152-8547</td>
-                <td>
-                    <a href="/admin/cartao/visualisa-cartao"<?php echo $funcionarios->cod_pessoa ?>" title="Visualisar calendário e cartão de vacinas" class="btn btn-warning btn btn-small"><i class="icon-eye-open icon-white"></i></a>
-                    <a href="/admin/cartao/cadastro-cartao" title="Registrar e aprazar vacinas" class="btn btn-success btn btn-small"><i class="icon-list-alt icon-white"></i></a>
-                    <a href="/admin/pessoa/editar-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Alterar cartão de vacinas" class="btn btn-primary btn btn-small"><i class="icon-edit icon-white"></i></a>
-                    <a href="/admin/pessoa/excluir-funcionario/cod_pessoa/<?php echo $funcionarios->cod_pessoa ?>" title="Excluir registro de vacinas" class="btn btn-danger btn btn-small confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
-                </td>
-            </tr>
-
+            <?php foreach ($this->listPacientes as $cartao): ?>
+                <tr>
+                   <!-- <td>12</td>-->
+                    <td><?php echo $cartao->nome ?></td>
+                    <td><?php echo $cartao->nome_mae ?></td>
+                    <td><?php echo date('d-m-y', strtotime($cartao->dt_nasc)) ?></td>
+                    <td><?php echo $cartao->sexo ?></td>
+                    <td><?php echo $cartao->rg ?></td>
+                    <td><?php echo $cartao->telefone_celular ?></td>
+                    <td>
+                        <a href="/admin/cartao/visualisa-cartao/cod_pessoa/<?php echo $cartao->cod_pessoa ?>" title="Visualisar calendário e cartão de vacinas" class="btn btn-warning btn btn-small"><i class="icon-eye-open icon-white"></i></a>
+                        <a href="/admin/cartao/cadastro-cartao/cod_pessoa/<?php echo $cartao->cod_pessoa ?>" title="Registrar e aprazar vacinas" class="btn btn-success btn btn-small"><i class="icon-list-alt icon-white"></i></a>
+                        <a href="/admin/pessoa/editar-cartao/cod_pessoa/<?php echo $cartao->cod_pessoa ?>" title="Alterar cartão de vacinas" class="btn btn-primary btn btn-small"><i class="icon-edit icon-white"></i></a>
+                        <a href="/admin/pessoa/excluir-cartao/cod_pessoa/<?php echo $cartao->cod_pessoa ?>" title="Excluir registro de vacinas" class="btn btn-danger btn btn-small confirm"><i class="icon-trash icon-white"></i></a>&nbsp;
+                    </td>
+                </tr>
+            <?php endforeach; ?>
         </tbody>
     </table>
     <div class="pagination pagination-centered">
         <ul>
             <!--TABELA COM OS DADOS DA PESQUISA-->
-            <li><a href="#">Anterior</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">6</a></li>
-            <li><a href="#">7</a></li>
-            <li><a href="#">Proximo</a></li>
+            <li><a href="<?php echo $this->pagination->previous ?>">Anterior</a></li>
+            <?php echo $this->pagination->pages ?>
+            <li><a href="<?php echo $this->pagination->next ?>">Proximo</a></li>
         </ul>
     </div>
 </fieldset>
