Correção de caso de uso cartao vacina.

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -123,7 +123,7 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Número da Dose:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->cod_dose ?>
+                                    <?php echo $this->form->dose ?>
                                 </div>
                             </div>
                         </div>
