--- a/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
+++ b/application/modules/admin/views/scripts/pessoa/visualisar-cadastro.phtml
@@ -1,40 +1,173 @@
 <ul class="pager offset10">
     <li class="previous">
-        <a href="/admin/cartao/consulta-cartao"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
+        <a href="/admin/pessoa/consulta-funcionario"><i class="icon-arrow-left"></i><strong>Voltar</strong></a>
     </li>
 
 </ul>
 
-<table class="table table-bordered">
+<fieldset>
+    <legend>Visualisar Cadastro</legend> 
 
-    <tbody  style="font-size: 13px;">
-        <tr class="info">
-            <td>Código do Paciente:</td>
-            <td>12</td>
-        </tr>
-        <tr>
-            <td>Nome do Paciente:</td>
-            <td>José da Silva</td>
-        </tr>
-        <tr class="info">
-            <td>Nome da Mãe:</td>
-            <td>Maria da Silva</td>
-        </tr>
-        <tr>
-            <td>Data de Nascimento:</td>
-            <td>06/10/1989</td>
-        </tr>
-        <tr class="info">
-            <td>Sexo:</td>
-            <td>Masculino</td>
-        </tr>
-        <tr>
-            <td>Telefone Celular:</td>
-            <td>(61)9152-8547</td>
-        </tr>
-        <tr class="info">
-            <td>E-mail:</td>
-            <td>jose_silva@gmail.com</td>
-        </tr>
-    </tbody>
-</table>
+    <div class="row-fluid">
+
+        <div  class ="span12">
+            <div  class ="span5">
+
+                <table class="table table-bordered table-condensed ">
+
+                    <caption style="font-size: 20px;font-weight: bold;">Dados Principais</caption>
+                    <tbody  style="font-size: 13px;">
+                        <tr class="info">
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Código do Funcionário:</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Nome do Funcionário:</td>
+                            <td>José da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Nome da Mãe:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Nome do Pai:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Data de Nascimento:</td>
+                            <td>06/10/1989</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">RG Nº:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">CPF Nº:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Registro de Nascimento Nº:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Estado civil:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Sexo:</td>
+                            <td>Masculino</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+            <div  class ="span5 offset1">
+
+                <table class="table table-bordered table-condensed ">
+
+                    <caption style="font-size: 20px;font-weight: bold;">Dados Complementares</caption>
+                    <tbody  style="font-size: 13px;">
+                        <tr class="info">
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Matrícula:</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Cargo:</td>
+                            <td>José da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Função:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Lotação:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Unidade de Saúde:</td>
+                            <td>06/10/1989</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Status:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Telefone Residencial:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Telefone Celular:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">E-mail:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Perfil:</td>
+                            <td>Masculino</td>
+                        </tr>
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Usuário:</td>
+                            <td>Masculino</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+
+
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div  class ="span5">
+
+                <table class="table table-bordered table-condensed ">
+
+                    <caption style="font-size: 20px;font-weight: bold;">Endereço</caption>
+                    <tbody  style="font-size: 13px;">
+                        <tr class="info">
+                            <td  style="font-size: 15px;font-weight: bold;width: 220px;">Endereço:</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Número:</td>
+                            <td>José da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Complemento:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">Bairro:</td>
+                            <td>Maria da Silva</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">CEP:</td>
+                            <td>06/10/1989</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size: 15px;font-weight: bold;">UF:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                        <tr class="info">
+                            <td style="font-size: 15px;font-weight: bold;">Cidade:</td>
+                            <td>Masculino</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
