Correção e construçao do caso de uso  cartao vacina

--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -65,7 +65,7 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Data da Aplicação:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->dt_vac_aplicada ?>
+                                    <?php echo $this->form->dt_vacina ?>
                                 </div>
                             </div>
                             <div class="control-group">
@@ -91,7 +91,7 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Lote da Vacina:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->cod_lote ?>
+                                    <?php echo $this->form->VacinaAplicada ?>
                                 </div>
                             </div>
                             <div class="control-group">
