Correção e construçao do caso de uso  cartao vacina inserção e agendamento concluido

--- a/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/registrar-aprazar-vacina.phtml
@@ -109,7 +109,7 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Campanha:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->cod_campanha ?>
+                                    <?php echo $this->form->VacinaAplicada->cod_campanha ?>
                                 </div>
                             </div>
                         </div>
@@ -146,6 +146,12 @@
                                 <label for="inputEmail" class="control-label">Número da Dose:</label>
                                 <div class="controls">
                                     <?php echo $this->form->dose ?>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label for="inputEmail" class="control-label">Grupo Vacinação:</label>
+                                <div class="controls">
+                                    <?php echo $this->form->cod_grupo_vacina ?>
                                 </div>
                             </div>
                         </div>
